[gd_scene load_steps=38 format=2]

[ext_resource path="res://units/player/priest/player.png" type="Texture" id=1]
[ext_resource path="res://units/player/Player.gd" type="Script" id=2]
[ext_resource path="res://overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://units/player/run_movement_behaviour.gd" type="Script" id=4]
[ext_resource path="res://units/player/step_sounds/Steps_wood-015.ogg" type="AudioStream" id=5]
[ext_resource path="res://units/player/step_sounds/Steps_wood-011.ogg" type="AudioStream" id=6]
[ext_resource path="res://resources/fonts/Daydream.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://ui/hud/bg_lifebar.png" type="Texture" id=8]
[ext_resource path="res://ui/hud/hover_lifebar.png" type="Texture" id=9]
[ext_resource path="res://ui/hud/fill_lifebar.png" type="Texture" id=10]
[ext_resource path="res://ui/hud/UIGold.tscn" type="PackedScene" id=11]
[ext_resource path="res://ui/hud/stats/stats_container_group.tscn" type="PackedScene" id=12]
[ext_resource path="res://ui/menus/pause_menu/pause_menu.tscn" type="PackedScene" id=13]
[ext_resource path="res://units/player/step_sounds/Steps_wood-016.ogg" type="AudioStream" id=14]
[ext_resource path="res://units/player/step_sounds/Steps_wood-017.ogg" type="AudioStream" id=15]
[ext_resource path="res://units/player/step_sounds/Steps_wood-012.ogg" type="AudioStream" id=16]
[ext_resource path="res://units/player/step_sounds/Steps_wood-013.ogg" type="AudioStream" id=17]
[ext_resource path="res://units/player/step_sounds/Steps_wood-014.ogg" type="AudioStream" id=18]
[ext_resource path="res://items/priest_staff/priest_staff.tscn" type="PackedScene" id=19]
[ext_resource path="res://visual_effects/floating_text/floating_text.tscn" type="PackedScene" id=20]

[sub_resource type="Shader" id=35]
code = "shader_type canvas_item;

uniform bool active = false;

void fragment() {
	vec4 previous_color = texture(TEXTURE, UV);
	
	vec4 white_color = vec4(1.0, 1.0, 1.0, previous_color.a);
	vec4 new_color = previous_color;
	if (active == true) {
		new_color = white_color;
	}
	COLOR = new_color;
}"

[sub_resource type="ShaderMaterial" id=36]
shader = SubResource( 35 )
shader_param/active = false

[sub_resource type="CircleShape2D" id=22]
radius = 5.91559

[sub_resource type="CircleShape2D" id=31]
resource_local_to_scene = true
radius = 6.90144

[sub_resource type="CircleShape2D" id=23]
radius = 57.1921

[sub_resource type="CircleShape2D" id=24]
radius = 9.0

[sub_resource type="CircleShape2D" id=30]
radius = 9.85921

[sub_resource type="CircleShape2D" id=25]
radius = 103.541

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.01428, 1.00565 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=26]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 180.0 ]
}

[sub_resource type="Animation" id=7]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=33]
resource_name = "moving_side"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=34]
resource_name = "moving_side_flipped"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}

[sub_resource type="Shader" id=27]
code = "shader_type canvas_item;

uniform vec4 color: hint_color;
uniform float multiplier = 0.2;
uniform float softness = 0.2;

void fragment() {
	float value = distance(UV, vec2(0.5));
	COLOR = vec4(color.rgb, smoothstep(multiplier, softness, value));
}"

[sub_resource type="ShaderMaterial" id=28]
shader = SubResource( 27 )
shader_param/color = Color( 0, 0, 0, 1 )
shader_param/multiplier = 0.8
shader_param/softness = 0.8

[sub_resource type="DynamicFont" id=32]
size = 14
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=29]
font_data = ExtResource( 7 )

[node name="Player" type="KinematicBody2D" groups=["player"]]
position = Vector2( 93, 69 )
scale = Vector2( 1.01428, 1.00565 )
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )
floating_text = ExtResource( 20 )
step_sounds = [ ExtResource( 6 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 15 ) ]

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 36 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 1 )
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 5 )
shape = SubResource( 22 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 4.97191 )
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 7.62939e-06, 0 )
shape = SubResource( 31 )

[node name="ItemAttractArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemAttractArea"]
shape = SubResource( 23 )

[node name="ItemPickupArea" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemPickupArea"]
shape = SubResource( 24 )

[node name="ItemShopArea" type="Area2D" parent="." groups=["buy"]]
visible = false
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemShopArea"]
shape = SubResource( 30 )

[node name="Range" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
shape = SubResource( 25 )

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="MovementBehaviour" type="Node2D" parent="."]
script = ExtResource( 4 )
step_sounds = [ ExtResource( 6 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 5 ), ExtResource( 14 ), ExtResource( 15 ) ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="MovementBehaviour"]
root_node = NodePath("../..")
playback_process_mode = 0
anims/RESET = SubResource( 2 )
anims/death = SubResource( 26 )
anims/idle = SubResource( 7 )
anims/moving_side = SubResource( 33 )
anims/moving_side_flipped = SubResource( 34 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
limit_right = 710
limit_bottom = 550
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = true
smoothing_speed = 8.5
drag_margin_left = 0.15
drag_margin_right = 0.15
editor_draw_drag_margin = true

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="WeaponService" type="Node2D" parent="."]

[node name="PriestStaff" parent="WeaponService" instance=ExtResource( 19 )]

[node name="UI" type="CanvasLayer" parent="."]

[node name="DamageVignette" type="ColorRect" parent="UI"]
material = SubResource( 28 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 40.0
margin_bottom = 40.0

[node name="MaginContainer" type="MarginContainer" parent="UI"]
margin_left = 12.0
margin_top = 10.0
margin_right = 52.0
margin_bottom = 50.0

[node name="PlayerInfo" type="VBoxContainer" parent="UI/MaginContainer"]
margin_right = 72.0
margin_bottom = 50.0

[node name="HealthBar" type="TextureProgress" parent="UI/MaginContainer/PlayerInfo"]
margin_right = 72.0
margin_bottom = 14.0
value = 100.0
texture_under = ExtResource( 8 )
texture_over = ExtResource( 9 )
texture_progress = ExtResource( 10 )
tint_progress = Color( 0.498039, 0, 0, 1 )

[node name="Label" type="Label" parent="UI/MaginContainer/PlayerInfo/HealthBar"]
margin_left = 3.0
margin_top = 2.0
margin_right = 67.0
margin_bottom = 24.0
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 32 )

[node name="UpdateTween" type="Tween" parent="UI/MaginContainer/PlayerInfo"]

[node name="UIGold" parent="UI/MaginContainer/PlayerInfo" instance=ExtResource( 11 )]
margin_top = 18.0
margin_right = 72.0
margin_bottom = 50.0

[node name="Icon" parent="UI/MaginContainer/PlayerInfo/UIGold" index="0"]
margin_bottom = 32.0

[node name="GoldLabel" parent="UI/MaginContainer/PlayerInfo/UIGold" index="1"]
margin_top = 8.0
margin_bottom = 24.0

[node name="WaveEndedPanel" type="Panel" parent="UI"]
visible = false
modulate = Color( 1, 1, 1, 0.533333 )
margin_left = -24.0
margin_top = -33.0
margin_right = 729.0
margin_bottom = 569.0

[node name="RunLostLabel" type="Label" parent="UI"]
visible = false
margin_left = 205.0
margin_top = 50.0
margin_right = 443.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 29 )
text = "RUN LOST"
align = 1

[node name="StatsContainer" parent="UI" instance=ExtResource( 12 )]
margin_left = 581.0
margin_top = 106.0
margin_right = 624.0
margin_bottom = 202.0

[node name="VBoxContainer" parent="UI/StatsContainer" index="0"]
margin_right = 43.0

[node name="MaxHPContainer" parent="UI/StatsContainer/VBoxContainer" index="0"]
margin_right = 43.0

[node name="SpeedContainer" parent="UI/StatsContainer/VBoxContainer" index="1"]
margin_right = 43.0

[node name="ArmorContainer" parent="UI/StatsContainer/VBoxContainer" index="2"]
margin_right = 43.0

[node name="DamageContainer" parent="UI/StatsContainer/VBoxContainer" index="3"]
margin_right = 43.0

[node name="CritDamageContainer" parent="UI/StatsContainer/VBoxContainer" index="4"]
margin_right = 43.0

[node name="SpeedShotContainer" parent="UI/StatsContainer/VBoxContainer" index="5"]
margin_right = 43.0

[node name="AttackSpeedContainer" parent="UI/StatsContainer/VBoxContainer" index="6"]
margin_right = 43.0

[node name="PauseMenu" parent="UI" instance=ExtResource( 13 )]
visible = false
margin_left = -2.0
margin_top = 29.0
margin_right = -2.0
margin_bottom = 29.0

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 3.0

[connection signal="hurt" from="Hurtbox" to="." method="_on_Hurtbox_hurt"]
[connection signal="area_entered" from="ItemAttractArea" to="." method="_on_ItemAttractArea_area_entered"]
[connection signal="area_entered" from="ItemPickupArea" to="." method="_on_ItemPickupArea_area_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="GameOverTimer" to="." method="_on_GameOverTimer_timeout"]

[editable path="Hurtbox"]
[editable path="UI/MaginContainer/PlayerInfo/UIGold"]
[editable path="UI/StatsContainer"]
[editable path="UI/StatsContainer/VBoxContainer/MaxHPContainer"]
